# show-recent-activity-for-github-bot

./: Cargo.toml  shell.nix
nix/: dependencies.nix  sources.json
src/: main.rs
