[package]
name = "show-recent-activity-for-github-bot"
version = "0.1.0"
authors = ["Michael Howell <michael@notriddle.com>"]
edition = "2018"

[dependencies]
clap = "2.24"
reqwest = { version = "0.10", features = ["rustls-tls", "json"], default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
